src/test/ui/borrowck/regions-escape-bound-fn.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-escape-bound-fn.rs:18:22
   |
LL |     with_int(|y| x = Some(y));
   |                      ^^^^^^^

error: borrowed data escapes outside of closure
  --> $DIR/regions-escape-bound-fn.rs:18:18
   |
LL |     let mut x: Option<&isize> = None;
   |         ----- `x` is declared here, outside of the closure body
LL |     with_int(|y| x = Some(y));
   |               -  ^^^^^^^^^^^ `y` escapes the closure body here
   |               |
   |               `y` is a reference that is only valid in the closure body

error: aborting due to previous error

